--- a/3d.html
+++ b/3d.html
@@ -58,7 +58,7 @@
           <h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
           <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Ile des vivants / Ile des morts.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/ile.html" data-cycle="3000">
             <img src="./images/iles/morts.webp">
 						</a>
     </div>
@@ -82,7 +82,7 @@
           <h3>Blender - Cycles</h3><h3>2015 & 2021</h3>
           <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Typhoon.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/typhoon.html" data-cycle="3000">
             <img src="./images/typhoon/2.3.webp">
 						</a>
     </div>
@@ -93,9 +93,9 @@
           <h3>Blender - Cycles</h3><h3>April 2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Tout va bien.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tvb.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -104,9 +104,9 @@
           <h3>Blender - Cycles</h3><h3>2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Conq.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/conq.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles, Quixel Mixer & Bridge -->
     <div class="article_container">
@@ -115,9 +115,9 @@
           <h3>Blender - Cycles - Quixel Mixer & Bridge</h3><h3>June 2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/The Skull.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/skull.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Video, Blender 2.91, Eevee -->
     <div class="article_container">
@@ -138,7 +138,7 @@
           <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
           <p>Made using Blender's sculpting mode and a Wacom tablet.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Tau.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
 						</a>
     </div>
@@ -149,9 +149,9 @@
           <h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>October 2020</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Farm.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/farm.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -160,7 +160,7 @@
           <h3>Blender - Cycles</h3><h3>May 2018</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Semiotic Tower.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/tower.html" data-cycle="3000">
             <img src="./images/foss/foss35HD4.webp">
 						</a>
     </div>
@@ -171,7 +171,7 @@
           <h3>Blender - Cycles</h3><h3>January 2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Up / Down.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
             <img src="./images/up_down/2updown3.webp">
 						</a>
     </div>
@@ -182,10 +182,10 @@
           <h3>Blender - Cycles</h3><h3>2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Planete boule.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/planete_boule/1 100.webp">
 						<img src="./images/planete_boule/2 100.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -194,9 +194,9 @@
           <h3>Blender - Cycles</h3><h3>January 2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Colosse.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/colosse.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Video, Blender, Cycles -->
     <div class="article_container">
@@ -217,9 +217,9 @@
           <h3>Blender - Cycles</h3><h3>December 2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Stuka.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/stuka.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -228,9 +228,9 @@
           <h3>Blender - Cycles</h3><h3>2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Death.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/death.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -239,9 +239,9 @@
           <h3>Blender - Cycles</h3><h3>2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Ortho Bedroom.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/ortho_bedroom.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -250,9 +250,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/TriBot.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tribot.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -261,10 +261,10 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/TagBot.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tag_bot/tag bot anim2 wp.webp">
 						<img src="./images/tag_bot/tag bot.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -273,9 +273,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Fe.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/fe.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -284,9 +284,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Wallpp.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/4K.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Internal -->
     <div class="article_container">
@@ -295,9 +295,9 @@
           <h3>Blender - Internal</h3><h3>March 2013</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Orix.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/ORIX3.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Cinema 4D -->
     <div class="article_container">
@@ -306,7 +306,7 @@
           <h3>Cinema 4D</h3><h3>February 2009</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Orange Verte.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/orange.webp">
-						</a>
+						</div>
     </div>
