--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
           <p>Made using Blender's sculpting mode and a Wacom tablet.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Tau.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/tau.html" data-cycle="3000">
             <img src="./images/tau/3.1.webp">
 						</a>
     </div>
@@ -69,7 +69,7 @@
           <h3>Blender 3.0 - Cycles X</h3><h3>October 2021</h3>
           <p>Inspired from Arnold Böcklin <i>Isle of the Dead</i> paintings.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Ile des vivants / Ile des morts.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/ile.html" data-cycle="3000">
             <img src="./images/iles/morts.webp">
 						</a>
     </div>
@@ -80,7 +80,7 @@
           <h3>Blender - Cycles</h3><h3>May 2018</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Semiotic Tower.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/tower.html" data-cycle="3000">
             <img src="./images/foss/foss35HD4.webp">
 						</a>
     </div>
@@ -104,7 +104,7 @@
           <h3>Blender - Cycles</h3><h3>2015 & 2021</h3>
           <p>Loosely based on a <a href="https://en.wikipedia.org/wiki/Typhoon_(AFV_family)">Kamaz Typhoon APC</a> blueprint.</p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Typhoon.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/typhoon.html" data-cycle="3000">
             <img src="./images/typhoon/2.3.webp">
 						</a>
     </div>
@@ -115,9 +115,9 @@
           <h3>Blender - Cycles</h3><h3>April 2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Tout va bien.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tvb.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender Cycles, Quixel Mixer & Bridge -->
     <div class="article_container">
@@ -126,9 +126,9 @@
           <h3>Blender Cycles - Quixel Mixer & Bridge</h3><h3>October 2020</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Farm.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/farm.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -137,7 +137,7 @@
           <h3>Blender - Cycles</h3><h3>January 2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Up / Down.html" data-cycle="3000">
+        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
             <img src="./images/up_down/2updown3.webp">
 						</a>
     </div>
@@ -148,9 +148,9 @@
           <h3>Blender - Cycles</h3><h3>2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Conq.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/conq.webp">
-						</a>
+						</div>
     </div><!--------------------------------------------------------------------------- EOF -->
     <h1></h1>
     <h2 style="text-align: right;"><a href='./older_works.html'>Older ⭢</a></h2>
