--- a/older_works.html
+++ b/older_works.html
@@ -46,9 +46,9 @@
           <h3>Blender - Cycles - Quixel Mixer & Bridge</h3><h3>June 2021</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/The Skull.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/skull.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Video, Blender 2.91, Eevee -->
     <div class="article_container">
@@ -69,10 +69,10 @@
           <h3>Blender - Cycles</h3><h3>2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Planete boule.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/planete_boule/1 100.webp">
 						<img src="./images/planete_boule/2 100.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -81,9 +81,9 @@
           <h3>Blender - Cycles</h3><h3>January 2017</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Colosse.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/colosse.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -92,9 +92,9 @@
           <h3>Blender - Cycles</h3><h3>December 2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Stuka.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/stuka.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -103,9 +103,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/TriBot.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tribot.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Video, Blender, Cycles -->
     <div class="article_container">
@@ -126,9 +126,9 @@
           <h3>Blender - Cycles</h3><h3>2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Death.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/death.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -137,10 +137,10 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/TagBot.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/tag_bot/tag bot anim2 wp.webp">
 						<img src="./images/tag_bot/tag bot.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -149,9 +149,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Fe.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/fe.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -160,9 +160,9 @@
           <h3>Blender - Cycles</h3><h3>2015</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Wallpp.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/4K.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
@@ -171,9 +171,9 @@
           <h3>Blender - Cycles</h3><h3>2016</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Ortho Bedroom.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/ortho_bedroom.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Blender, Internal -->
     <div class="article_container">
@@ -182,9 +182,9 @@
           <h3>Blender - Internal</h3><h3>March 2013</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Orix.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/ORIX3.webp">
-						</a>
+						</div>
     </div>
 <!--------------------------------------------------------------------------- Cinema 4D -->
     <div class="article_container">
@@ -193,9 +193,9 @@
           <h3>Cinema 4D</h3><h3>February 2009</h3>
           <p></p>
         </div><div></div>
-        <a class="slideshow_container" href="./projects/Orange Verte.html" data-cycle="3000">
+        <div class="slideshow_container" data-cycle="3000">
             <img src="./images/orange.webp">
-						</a>
+						</div>
     </div><!--------------------------------------------------------------------------- EOF -->
     <h1></h1>
     <h2 style="text-align: right;"><a href='./older_works.html'>Older ⭢</a></h2>
