added arm project

--- a/3d.html
+++ b/3d.html
@@ -142,6 +142,17 @@
             <img src="./images/tau/3.1.webp">
 						</a>
     </div>
+<!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/arm.html">Arm Rig</a></h2>
+          <h3>Blender 3.0 - Cycles X</h3><h3>November 2020</h3>
+          <p>Created a rig with IK features for an arm model I found online</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/arm.html" data-cycle="3000">
+            <img src="./images/arm/untitled23.webp">
+						</a>
+    </div>
 <!--------------------------------------------------------------------------- Blender Cycles, Quixel Mixer & Bridge -->
     <div class="article_container">
         <div class="article_text">
