--- a/3d.html
+++ b/3d.html
@@ -35,6 +35,51 @@
         </div>
     </header>
 <!--------------------------------------------------------------------------- HEADER END -->
+<!--------------------------------------------------------------------------- Blender 3.1, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/brutalism.html">Brutalism</a></h2>
+          <h3>Blender 3.1 - Cycles X</h3><h3>February 2022</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/brutalism.html" data-cycle="3000">
+            <img src="./images/brutalism/untitled.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles, Quixel Mixer & Bridge -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>The Skull</h2>
+          <h3>Blender - Cycles - Quixel Mixer & Bridge</h3><h3>June 2021</h3>
+          <p></p>
+        </div><div></div>
+        <div class="slideshow_container" data-cycle="3000">
+            <img src="./images/skull.webp">
+						</div>
+    </div>
+<!--------------------------------------------------------------------------- Video, Blender 2.91, Eevee -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2>Bird Skull PixelArt Test</h2>
+          <h3>Blender 2.91 - Eevee</h3><h3>June 2021</h3>
+          <p></p>
+        </div><div></div>
+        <div class="video_container">
+            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
+            </iframe>
+        </div>
+    </div>
+<!--------------------------------------------------------------------------- Blender 3.1, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/lakehouse.html">Lakehouse</a></h2>
+          <h3>Blender 3.1 - Cycles X</h3><h3>November 2021</h3>
+          <p>First archviz project</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/lakehouse.html" data-cycle="3000">
+            <img src="./images/lakehouse/untitled23.webp">
+						</a>
+    </div>
 <!--------------------------------------------------------------------------- Video, Blender 3.0, Cycles X -->
     <div class="article_container">
         <div class="article_text">
@@ -104,29 +149,6 @@
             <img src="./images/conq.webp">
 						</div>
     </div>
-<!--------------------------------------------------------------------------- Blender, Cycles, Quixel Mixer & Bridge -->
-    <div class="article_container">
-        <div class="article_text">
-          <h2>The Skull</h2>
-          <h3>Blender - Cycles - Quixel Mixer & Bridge</h3><h3>June 2021</h3>
-          <p></p>
-        </div><div></div>
-        <div class="slideshow_container" data-cycle="3000">
-            <img src="./images/skull.webp">
-						</div>
-    </div>
-<!--------------------------------------------------------------------------- Video, Blender 2.91, Eevee -->
-    <div class="article_container">
-        <div class="article_text">
-          <h2>Bird Skull PixelArt Test</h2>
-          <h3>Blender 2.91 - Eevee</h3><h3>June 2021</h3>
-          <p></p>
-        </div><div></div>
-        <div class="video_container">
-            <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/bzI4PHsz-H4?autoplay=1&mute=1&loop=1">
-            </iframe>
-        </div>
-    </div>
 <!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
     <div class="article_container">
         <div class="article_text">
@@ -174,17 +196,6 @@
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
         <div class="article_text">
-          <h2><a href="./projects/up_down.html">Up / Down</a></h2>
-          <h3>Blender - Cycles</h3><h3>January 2017</h3>
-          <p></p>
-        </div><div></div>
-        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
-            <img src="./images/up_down/2updown3.webp">
-						</a>
-    </div>
-<!--------------------------------------------------------------------------- Blender, Cycles -->
-    <div class="article_container">
-        <div class="article_text">
           <h2>Planete boule</h2>
           <h3>Blender - Cycles</h3><h3>2017</h3>
           <p></p>
@@ -216,6 +227,17 @@
             <iframe style="border:0;" class="embedded_video" src="https://www.youtube.com/embed/BIAmGM0quHs?autoplay=1&mute=1&loop=1">
             </iframe>
         </div>
+    </div>
+<!--------------------------------------------------------------------------- Blender, Cycles -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/up_down.html">Up / Down</a></h2>
+          <h3>Blender - Cycles</h3><h3>January 2017</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/up_down.html" data-cycle="3000">
+            <img src="./images/up_down/2updown3.webp">
+						</a>
     </div>
 <!--------------------------------------------------------------------------- Blender, Cycles -->
     <div class="article_container">
