--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
             <img src="./images/tau/3.1.webp">
 						</a>
     </div>
+<!--------------------------------------------------------------------------- Blender 3.1, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/lakehouse.html">Lakehouse</a></h2>
+          <h3>Blender 3.1 - Cycles X</h3><h3>November 2021</h3>
+          <p>First archviz project</p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/lakehouse.html" data-cycle="3000">
+            <img src="./images/lakehouse/untitled23.webp">
+						</a>
+    </div>
+<!--------------------------------------------------------------------------- Blender 3.1, Cycles X -->
+    <div class="article_container">
+        <div class="article_text">
+          <h2><a href="./projects/brutalism.html">Brutalism</a></h2>
+          <h3>Blender 3.1 - Cycles X</h3><h3>February 2022</h3>
+          <p></p>
+        </div><div></div>
+        <a class="slideshow_container" href="./projects/brutalism.html" data-cycle="3000">
+            <img src="./images/brutalism/untitled.webp">
+						</a>
+    </div>
 <!--------------------------------------------------------------------------- Blender 3.0, Cycles X -->
     <div class="article_container">
         <div class="article_text">
@@ -160,5 +182,5 @@
 						</div>
     </div><!--------------------------------------------------------------------------- EOF -->
     <h2 style="text-align: right;"><a href='./older_works.html'>Older ⭢</a></h2>
-    <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script>
+    <script src="https://zodiacfra.github.io/scripts/slideshow.js"></script>
 </body>
