--- a/older_works.html
+++ b/older_works.html
@@ -193,5 +193,5 @@
             <img src="./images/orange.webp">
 						</div>
     </div><!--------------------------------------------------------------------------- EOF -->
-    <script src="https://zodiacfra.github.io/ZodiacFRA/scripts/slideshow.js"></script>
+    <script src="https://zodiacfra.github.io/scripts/slideshow.js"></script>
 </body>
