--- a/3d.html
+++ b/3d.html
@@ -41,14 +41,14 @@
     <div class="article_container">
         <div class="article_text">
             
-<h2>Vanité</h2><h3>Blender 3.2 - Cycles X</h3><h3>June 2022</h3>
+<h2><a href="./projects/vanité.html">⭢ Vanité</a></h2><h3>Blender 3.2 - Cycles X</h3><h3>June 2022</h3>
     <p></p>
 
         </div><div></div>
         
-        <div class="slideshow_container"  data-cycle="3000">
+        <a class="slideshow_container" href="./projects/vanité.html"  data-cycle="3000">
             <img src="./media/vanite/untitled4.webp">
-        </div>
+        </a>
 
     </div>
 
